updated build script to create the right snapshot in online maven repository

--- a/build.gradle
+++ b/build.gradle
@@ -84,8 +84,9 @@ artifacts {
     archives sourceJar, deobfJar
 }
 
-uploadArchives {
-    if (project.hasProperty('mavenFTPServer') && project.hasProperty('mavenFTPUser') && project.hasProperty('mavenFTPPassword')) {
+if (project.hasProperty('mavenFTPServer') && project.hasProperty('mavenFTPUser') && project.hasProperty('mavenFTPPassword')
+        && !project.hasProperty('mavenLocalPath')) {
+    uploadArchives {
         repositories.mavenDeployer {
             dependsOn build, deobfJar, sourcesJar
             configuration = configurations.deployerJars
