--- a/build.gradle
+++ b/build.gradle
@@ -89,14 +89,15 @@ if (project.hasProperty('mavenFTPServer') && project.hasProperty('mavenFTPUser')
     uploadArchives {
         repositories.mavenDeployer {
             dependsOn build, deobfJar, sourcesJar
+
             configuration = configurations.deployerJars
             repository(url: project.mavenFTPServer) {
                 authentication(userName: project.mavenFTPUser, password: mavenFTPPassword)
             }
         }
     }
+    uploadArchives.dependsOn build, sourcesJar, deobfJar
 }
-uploadArchives.dependsOn build, sourcesJar, deobfJar
 
 if (project.hasProperty('mavenLocalPath')) {
     publishing {
@@ -116,6 +117,7 @@ if (project.hasProperty('mavenLocalPath')) {
             }
         }
     }
+    publishing.dependsOn build, sourcesJar, deobfJar
 }
 
 
