--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ repositories {
 }
 
 dependencies {
-    compile "net.darkhax.tesla:Tesla:1.11-1.3.0.51:deobf"
+    compile "net.darkhax.tesla:Tesla:${tesla_version}:deobf"
     deployerJars 'org.apache.maven.wagon:wagon-ftp:2.2'
 }
 
