--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 minecraft_version = 1.11
-forge_version = 13.19.0.2178
-mcp_version = snapshot_20161202
+forge_version = 13.19.1.2189
+mcp_version = snapshot_20161208
+tesla_version = 1.11-1.3.0.51
 
-mod_version = 0.0.2
+mod_version = 0.0.3
 #mod_suffix = HF
-mod_suffix = snapshot
+#mod_suffix = snapshot
