--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ forge_version = 13.19.1.2189
 mcp_version = snapshot_20161208
 tesla_version = 1.11-1.3.0.51
 
-mod_version = 0.0.3
+mod_version = 0.0.4
 #mod_suffix = HF
-#mod_suffix = snapshot
+mod_suffix = snapshot
