added gears added font renderer compat util

--- a/build.gradle
+++ b/build.gradle
@@ -86,8 +86,7 @@ artifacts {
     archives sourceJar, deobfJar
 }
 
-if (project.hasProperty('mavenFTPServer') && project.hasProperty('mavenFTPUser') && project.hasProperty('mavenFTPPassword')
-        && !project.hasProperty('mavenLocalPath')) {
+if (project.hasProperty('mavenFTPServer') && project.hasProperty('mavenFTPUser') && project.hasProperty('mavenFTPPassword')) {
     uploadArchives {
         repositories.mavenDeployer {
             dependsOn build, deobfJar, sourcesJar
@@ -120,7 +119,6 @@ if (project.hasProperty('mavenLocalPath')) {
         }
     }
 }
-
 
 def getDate() {
     def date = new Date()
