--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,6 @@ forge_version = 13.20.0.2230
 mcp_version = snapshot_20170215
 tesla_version = 1.11-1.3.0.51
 
-mod_version = 0.3.0
+mod_version = 0.4.0
 #mod_suffix = HF
-#mod_suffix = snapshot
+mod_suffix = snapshot
