--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.3'
     repositories {
         mavenCentral()
         maven { url = "http://files.minecraftforge.net/maven" }
@@ -50,16 +50,15 @@ repositories {
     jcenter()
     maven { url 'http://maven.epoxide.xyz' }
     maven { url 'http://maven.ndrei.net' }
-    // For Kotlin lang adapter
-    // maven { url 'http://mvn.rx14.co.uk/shadowfacts/' }
+    maven { url 'http://maven.shadowfacts.net/' }
     mavenLocal()
 }
 
 dependencies {
-    compile "net.darkhax.tesla:Tesla-1.12:${tesla_version}:deobf"
+    compile "net.darkhax.tesla:Tesla-1.12:$tesla_version:deobf"
     deployerJars 'org.apache.maven.wagon:wagon-ftp:2.2'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    // compile group: "net.shadowfacts", name: "Forgelin", version: "LATEST_VERSION"
+    compile "net.shadowfacts:Forgelin:$forgelin_version"
 }
 
 processResources {
