--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ minecraft_version = 1.12
 forge_version = 14.21.0.2375
 mcp_version = snapshot_20170624
 tesla_version = 1.0.60
+forgelin_version = 1.5.0
 
 mod_version = 1.0.0
 #mod_suffix = HF
