--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ forge_version = 14.21.1.2400
 mcp_version = snapshot_20170624
 tesla_version = 1.0.60
 forgelin_version = 1.5.0
+redstoneflux_version = 2.0.0.1
 
 mod_version = 1.0.3
 #mod_suffix = HF
