--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
 minecraft_version = 1.12
-forge_version = 14.21.1.2412
-mcp_version = snapshot_20170713
+forge_version = 14.21.1.2413
+mcp_version = snapshot_20170717
 tesla_version = 1.0.60
 forgelin_version = 1.5.0
 redstoneflux_version = 2.0.1.2
+bc_version = 7.99.6
 
-mod_version = 1.0.5
+mod_version = 1.0.6
 #mod_suffix = HF
 mod_suffix = snapshot
 
