--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,18 @@
 minecraft_version = 1.12
 forge_version = 14.21.1.2413
 mcp_version = snapshot_20170717
+
+forgelin_version = 1.5.1
+kotlin_version = 1.1.3-2
+kotlin.incremental = false
+
 tesla_version = 1.0.60
-forgelin_version = 1.5.0
 redstoneflux_version = 2.0.1.2
 bc_version = 7.99.6
 
+mod_id = teslacorelib
+mod_name = Tesla Core Lib
 mod_version = 1.0.6
 #mod_suffix = HF
 mod_suffix = snapshot
 
-kotlin.incremental = false
