--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,21 @@
-minecraft_version = 1.12
-forge_version = 14.21.1.2443
-mcp_version = snapshot_20170624
+minecraft_version = 1.12.1
+forge_version = 14.22.1.2485
+mcp_version = snapshot_20170919
 
 forgelin_version = 1.5.1
 kotlin_version = 1.1.3-2
 kotlin.incremental = false
 
+tesla_mcversion = 1.12
 tesla_version = 1.0.61
+
+redstoneflux_mcversion = 1.12
 redstoneflux_version = 2.0.1.2
+
 bc_version = 7.99.6
 
 mod_id = teslacorelib
 mod_name = Tesla Core Lib
 mod_version = 1.0.10
-#mod_suffix = HF
 mod_suffix = snapshot
-
+#mod_suffix = HF
