--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
-minecraft_version = 1.12.1
-forge_version = 14.22.1.2485
-mcp_version = snapshot_20170919
+#minecraft_version = 1.12.1
+#forge_version = 14.22.1.2485
+#mcp_version = snapshot_20171008
 
-#minecraft_version=1.12.2
-#forge_version=14.23.0.2493
-#mcp_version=snapshot_20170919
+minecraft_version=1.12.2
+forge_version=14.23.0.2512
+mcp_version=snapshot_20171008
 
 forgelin_version = 1.5.1
 kotlin_version = 1.1.3-2
 kotlin.incremental = false
 
-tesla_mcversion = 1.12
-tesla_version = 1.0.61
+tesla_mcversion = 1.12.2
+tesla_version = 1.0.63
 
 redstoneflux_mcversion = 1.12
 redstoneflux_version = 2.0.1.2
