--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
-#minecraft_version = 1.12.1
-#forge_version = 14.22.1.2485
-#mcp_version = snapshot_20171008
+minecraft_version = 1.12
+forge_version = 14.21.1.2443
+mcp_version = snapshot_20171020
 
-minecraft_version=1.12.2
-forge_version=14.23.0.2512
-mcp_version=snapshot_20171008
+#minecraft_version=1.12.2
+#forge_version=14.23.0.2515
+#mcp_version=snapshot_20171020
 
 forgelin_version = 1.5.1
 kotlin_version = 1.1.3-2
