--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ mcp_version = snapshot_20171103
 #forge_version=14.23.0.2515
 #mcp_version=snapshot_20171020
 
-forgelin_version = 1.5.1
-kotlin_version = 1.1.3-2
+forgelin_version = 1.6.0
+kotlin_version = 1.2.0
 kotlin.incremental = false
 
 tesla_mcversion = 1.12.2
