--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,6 @@ bc_version = 7.99.6
 mod_id = teslacorelib
 mod_name = Tesla Core Lib
 mod_version = 1.0.13
+
+cf_project_id = 254602
+#cf_release_type = beta
