moving to MMD servers

--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ repositories {
 
 dependencies {
     deployerJars "org.apache.maven.wagon:wagon-ssh:2.2"
-    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jre8:${project.kotlin_version}"
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${project.kotlin_version}"
     compile "net.shadowfacts:Forgelin:${project.forgelin_version}"
 
     compileOnly "net.darkhax.tesla:Tesla-${project.tesla_mcversion}:${project.tesla_version}:deobf"
