--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,22 @@ minecraft_version = 1.12
 forge_version = 14.21.1.2443
 mcp_version = snapshot_20180223
 
-#minecraft_version=1.12.2
-#forge_version=14.23.0.2515
-#mcp_version=snapshot_20171020
-
+cursegradle_version = 1.0.10
 forgelin_version = 1.6.0
 kotlin_version = 1.2.0
 kotlin.incremental = false
+dokka_version = 0.9.16
+
+jei_version = 4.8.5
+
+group_name = net.ndrei
+mod_id = teslacorelib
+mod_name = Tesla Core Lib
+mod_version = 1.0.13
+
+cf_project_id = 254602
+# none | alpha | beta | release
+cf_release_type = none
 
 tesla_mcversion = 1.12.2
 tesla_version = 1.0.63
@@ -16,11 +25,4 @@ tesla_version = 1.0.63
 redstoneflux_mcversion = 1.12
 redstoneflux_version = 2.0.1.2
 
-bc_version = 7.99.6
-
-mod_id = teslacorelib
-mod_name = Tesla Core Lib
-mod_version = 1.0.13
-
-cf_project_id = 254602
-#cf_release_type = beta
+bc_version = 7.99.15
