--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ mod_version = 1.0.13
 
 cf_project_id = 254602
 # none | alpha | beta | release
-cf_release_type = beta
+cf_release_type = none
 
 tesla_mcversion = 1.12.2
 tesla_version = 1.0.63
