added tesla as required on curse;

--- a/build.gradle
+++ b/build.gradle
@@ -228,6 +228,7 @@ curseforge {
                 displayName = "$project.mod_name : $displayVersion"
                 relations {
                     requiredLibrary 'shadowfacts-forgelin'
+                    requiredLibrary 'tesla'
                     optionalLibrary 'powered-thingies'
                 }
             }
