--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-minecraft_version = 1.12
-forge_version = 14.21.1.2443
-mcp_version = snapshot_20180223
+minecraft_version=1.12.2
+forge_version=14.23.3.2655
+mcp_version=snapshot_20180425
 
 cursegradle_version = 1.0.10
 forgelin_version = 1.6.0
@@ -8,7 +8,7 @@ kotlin_version = 1.2.0
 kotlin.incremental = false
 dokka_version = 0.9.16
 
-jei_version = 4.8.5
+jei_version = 4.9.1
 
 group_name = net.ndrei
 mod_id = teslacorelib
@@ -25,4 +25,4 @@ tesla_version = 1.0.63
 redstoneflux_mcversion = 1.12
 redstoneflux_version = 2.0.1.2
 
-bc_version = 7.99.15
+bc_version = 7.99.16
