--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 minecraft_version = 1.11.2
-forge_version = 13.20.0.2261
-mcp_version = snapshot_20170331
+forge_version = 13.20.1.2386
+mcp_version = stable_32
 tesla_version = 1.11-1.3.0.51
 
 mod_version = 0.7.3
