update mappings to stable_29

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'http://maven.epoxide.xyz' }
+    maven { url 'http://maven.mcmoddev.com' }
     maven { url 'http://maven.ndrei.net' }
     mavenLocal()
 }
