--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 minecraft_version = 1.10.2
 forge_version = 12.18.3.2185
-mcp_version = snapshot_20161111
+mcp_version = stable_29
 tesla_version = 1.10.2-1.2.1.50
 
 mod_version = 0.7.3
