--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 minecraft_version=1.12.2
 forge_version=14.23.4.2705
-mcp_version=snapshot_20180709
+mcp_version=stable_39
 
 cursegradle_version = 1.0.11
 forgelin_version = 1.7
@@ -8,7 +8,7 @@ kotlin_version = 1.2.61
 kotlin.incremental = false
 dokka_version = 0.9.17
 
-jei_version = 4.9.1
+jei_version = 4.9.1+
 
 group_name = net.ndrei
 mod_id = teslacorelib
@@ -17,12 +17,12 @@ mod_version = 1.0.15
 
 cf_project_id = 254602
 # none | alpha | beta | release
-cf_release_type = beta
+cf_release_type = none
 
 tesla_mcversion = 1.12.2
-tesla_version = 1.0.63
+tesla_version = 1.0.63+
 
 redstoneflux_mcversion = 1.12
-redstoneflux_version = 2.0.1.2
+redstoneflux_version = 2.0.1.2+
 
-bc_version = 7.99.16
+bc_version = 7.99.16+
