probably fixes #28 : Crash caused by emptying fluid containers

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 minecraft_version=1.12.2
-forge_version=14.23.4.2705
+forge_version=14.23.5.2806
 mcp_version=stable_39
 
-cursegradle_version = 1.0.11
+cursegradle_version = 1.2.0
 forgelin_version = 1.7
 kotlin_version = 1.2.61
 kotlin.incremental = false
@@ -13,11 +13,11 @@ jei_version = 4.9.1+
 group_name = net.ndrei
 mod_id = teslacorelib
 mod_name = Tesla Core Lib
-mod_version = 1.0.15
+mod_version = 1.0.16
 
 cf_project_id = 254602
 # none | alpha | beta | release
-cf_release_type = none
+cf_release_type = beta
 
 tesla_mcversion = 1.12.2
 tesla_version = 1.0.63+
