updated version files

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,11 @@ jei_version = 4.9.1+
 group_name = net.ndrei
 mod_id = teslacorelib
 mod_name = Tesla Core Lib
-mod_version = 1.0.17
+mod_version = 1.0.18
 
 cf_project_id = 254602
 # none | alpha | beta | release
-cf_release_type = release
+cf_release_type = none
 
 tesla_mcversion = 1.12.2
 tesla_version = 1.0.63+
